data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1652.wast
;; 3. **Test 3: Index Calculation Overflow in `br_table` Leading to Unreachable**    - A `br_table` with an index derived from a multiplication overflow, leading to a target with an `unreachable` instruction.    - **Reasoning:** Checks how index overflow scenarios are handled and if the `unreachable` is correctly executed.    - **Constraint:** Examines the error-handling when `br_table` index calculations exceed bounds.

(assert_invalid
  (module
    (func $test_unreachable_with_br_table
      (i32.const 2147483647)  ;; Maximum positive i32 value
      (i32.const 2)
      (i32.mul)                ;; Multiplication overflow
      (br_table 0 (unreachable))
    )
  )
  "type mismatch"
)